[gd_scene load_steps=3 format=3 uid="uid://cpmsc0ctcivxq"]

[ext_resource type="Script" path="res://scripts/menu/lobby/player_label_script.gd" id="1_2eoh6"]

[sub_resource type="LabelSettings" id="LabelSettings_sglm5"]
font_color = Color(0, 0, 0, 1)
outline_size = 5

[node name="HSplitContainer" type="HSplitContainer"]
offset_right = 338.0
offset_bottom = 40.0
split_offset = 315
dragger_visibility = 1
script = ExtResource("1_2eoh6")

[node name="PlayerNameLabel" type="Label" parent="."]
layout_mode = 2
text = "Name"
label_settings = SubResource("LabelSettings_sglm5")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="HSplitContainer" type="HSplitContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(125.44, 0)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/HSplitContainer"]
layout_mode = 2

[node name="BtnPlayer1" type="Button" parent="HBoxContainer/HSplitContainer/HBoxContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
text = "P1"

[node name="BtnPlayer2" type="Button" parent="HBoxContainer/HSplitContainer/HBoxContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
text = "P2"

[node name="PlayerLabel" type="Label" parent="HBoxContainer/HSplitContainer"]
layout_mode = 2
horizontal_alignment = 1

[connection signal="pressed" from="HBoxContainer/HSplitContainer/HBoxContainer/BtnPlayer1" to="." method="_on_btn_player_1_pressed"]
[connection signal="pressed" from="HBoxContainer/HSplitContainer/HBoxContainer/BtnPlayer2" to="." method="_on_btn_player_2_pressed"]
